# Prepix

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: github_actions_tests.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: ecda9930aefa_initial_schema_with_image_metadata_table.py
backend/src/app/: main.py
backend/src/app/api/: routes_auth.py  routes_images.py  routes_upload.py
backend/src/app/database/: __init__.py  crud.py  database.py  models.py
backend/src/app/middleware/: auth_middleware.py
backend/src/app/models/: __init__.py  schemas.py
backend/src/app/services/: cas_client.py  session.py  storage.py  user_storage.py
backend/tests/: conftest.py  test_crud.py  test_images.py  test_storage.py  test_upload.py
frontend/: Dockerfile.test  index.html  package-lock.json  package.json  tsconfis.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  Card.tsx  DarkModeToggle.tsx  ExpandedImageView.tsx  ImageCard.tsx  ImageGallery.tsx  Input.tsx  SearchForm.tsx  Sidebar.tsx  Toast.tsx  UploadForm.tsx
frontend/src/hooks/: useDarkMode.tsx  useImageGallery.ts  useToast.ts
frontend/src/test/: App.test.tsx  setup.ts
frontend/src/test/components/: ImageCard.test.tsx  ImageGallery.test.tsx  SearchForm.test.tsx  UploadForm.test.tsx
frontend/src/test/hooks/: useImageGallery.test.ts
nginx/: nginx.conf
