[project]
name = "euclid-backend"
version = "0.1.0"
description = "Euclid Pretty Pics Portal Backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.1.0",
    "pillow>=10.0.0"
]
